# SimulatesConway

./: .gitignore  CMakeLists.txt  GeneratesWorldInterface.h  GeneratesWorldMock.cpp  GeneratesWorldMock.h  OutputWorldInterface.h  OutputWorldMock.cpp  OutputWorldMock.h  SimulatesConway.cpp  SimulatesConway.h  SimulatesConwayTest.cpp  World.cpp  World.h  gtest-CMakeLists.txt  main.cpp  simulatesconwaytest.cpp
